--- a/comingsoon/assets/style.css
+++ b/comingsoon/assets/style.css
@@ -6,7 +6,7 @@
 }
 
 body{
-  font-family: 'Open Sans', sans-serif;
+  font-family:"tt-commons-pro", sans-serif;
   background: var(--white);
   color: var(--black);
   overflow-x: hidden;
@@ -199,7 +199,7 @@ CONTENT
   font-size: 0.85rem;
   padding: 0 0 20px 0;
   line-height: 2.5;
-  font-weight: 300;
+  font-weight: 100;
 }
 .panel-check h2 {
   margin-top:20px;
