--- a/comingsoon copy 2/assets/style.css
+++ b/comingsoon copy 2/assets/style.css
@@ -217,6 +217,30 @@ CONTENT
 
   text-align: center;
 }
+.intro-social-links {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.intro-social-links ul{
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+  padding: 0;
+  margin-top: 20px;
+}
+.intro-social-links a{
+  color: var(--white);
+  text-decoration: none;
+  display: inline-block;
+  transition: color .3s ease, transform .3s ease;
+}
+.intro-social-links a:hover {
+  color: var(--red);
+  transform: scale(1.35);  
+}
 
 .panel-kv {
   width: 50vw; /* 右半分 */
@@ -230,8 +254,8 @@ CONTENT
 }
 
 /* パネル3: Check It (赤背景) */
-.panel-check{
-  width: 43vw; /* 左半分 */
+/*.panel-check{
+  width: 43vw; /* 左半分 
   height: 100vh;
   background-color: var(--red);
   padding: 40px;
@@ -253,13 +277,13 @@ CONTENT
   font-weight: 300;
   line-height: 1.5;
 }
-
+*/
 
 /* ============= 
 
 footer 
 
-================ */
+================ 
 .footer-social-links {
   width: 100%;
   height: 60px;
@@ -287,3 +311,4 @@ footer
   color: var(--red);
   transform: scale(1.15);  
 }
+  */
