--- a/!comingsoon-sidescroll/assets/style.css
+++ b/!comingsoon-sidescroll/assets/style.css
@@ -217,30 +217,6 @@ CONTENT
 
   text-align: center;
 }
-.intro-social-links {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.intro-social-links ul{
-  list-style: none;
-  display: flex;
-  flex-direction: row;
-  gap: 30px;
-  padding: 0;
-  margin-top: 20px;
-}
-.intro-social-links a{
-  color: var(--white);
-  text-decoration: none;
-  display: inline-block;
-  transition: color .3s ease, transform .3s ease;
-}
-.intro-social-links a:hover {
-  color: var(--red);
-  transform: scale(1.35);  
-}
 
 .panel-kv {
   width: 50vw; /* 右半分 */
@@ -254,8 +230,8 @@ CONTENT
 }
 
 /* パネル3: Check It (赤背景) */
-/*.panel-check{
-  width: 43vw; /* 左半分 
+.panel-check{
+  width: 43vw; /* 左半分 */
   height: 100vh;
   background-color: var(--red);
   padding: 40px;
@@ -277,16 +253,16 @@ CONTENT
   font-weight: 300;
   line-height: 1.5;
 }
-*/
+
 
 /* ============= 
 
 footer 
 
-================ 
+================ */
 .footer-social-links {
-  width: 100%;
-  height: 60px;
+  width: 7vw;
+  height: 100vh;
   background: var(--black);
   display: flex;
   justify-content: center;
@@ -295,8 +271,8 @@ footer
 .footer-social-links ul{
   list-style: none;
   display: flex;
-  flex-direction: row;
-  gap: 60px;
+  flex-direction: column;
+  gap: 40px;
   padding: 0;
   margin: 0;
 }
@@ -311,4 +287,3 @@ footer
   color: var(--red);
   transform: scale(1.15);  
 }
-  */
