--- a/comingsoon/assets/style.css
+++ b/comingsoon/assets/style.css
@@ -168,16 +168,8 @@ CONTENT
 .horizontal-section {
   height: 100vh;
   width: 100%;
-  overflow: hidden;
   position: relative;
 }
-.inner-wrapper {
-  display: flex;
-  height: 100vh;
-  width: 200vw;
-  will-change: transform;
-}
-
 .panel {
   display: flex;
   width: 100vw;
@@ -217,6 +209,30 @@ CONTENT
 
   text-align: center;
 }
+.intro-social-links {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.intro-social-links ul{
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+  padding: 0;
+  margin-top: 20px;
+}
+.intro-social-links a{
+  color: var(--white);
+  text-decoration: none;
+  display: inline-block;
+  transition: color .3s ease, transform .3s ease;
+}
+.intro-social-links a:hover {
+  color: var(--red);
+  transform: scale(1.35);  
+}
 
 .panel-kv {
   width: 50vw; /* 右半分 */
@@ -227,63 +243,4 @@ CONTENT
   width: 100%;
   height: 100%;
   object-fit: cover; /* 画像を隙間なく表示 */
-}
-
-/* パネル3: Check It (赤背景) */
-.panel-check{
-  width: 43vw; /* 左半分 */
-  height: 100vh;
-  background-color: var(--red);
-  padding: 40px;
-  box-sizing: border-box;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-}
-.check-box {
-  width: 300px;
-  height: 300px;
-  background-color: rgba(255, 255, 255, 0.2);
-  border-radius: 15px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  padding: 20px;
-  font-weight: 300;
-  line-height: 1.5;
-}
-
-
-/* ============= 
-
-footer 
-
-================ */
-.footer-social-links {
-  width: 7vw;
-  height: 100vh;
-  background: var(--black);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.footer-social-links ul{
-  list-style: none;
-  display: flex;
-  flex-direction: column;
-  gap: 40px;
-  padding: 0;
-  margin: 0;
-}
-.footer-social-links a{
-  color: var(--white);
-  text-decoration: none;
-  font-size: 13px;
-  display: inline-block;
-  transition: color .3s ease, transform .3s ease;
-}
-.footer-social-links a:hover {
-  color: var(--red);
-  transform: scale(1.15);  
 }
