--- a/comingsoon/assets/style1.css
+++ b/comingsoon/assets/style1.css
@@ -233,8 +233,6 @@ CONTENT
   width: 100%;
   height: 100%;
   object-fit: cover; /* 画像を隙間なく表示 */
-  transform: scale(1.3);
-  transform-origin: center;
 }
 
 /* アニメーション用クラス */
@@ -413,4 +411,18 @@ RESPONRIVE DESIGN
     .menu-trigger {
         display: none;
     }
+}
+
+/* ===== スマホ用 ===== */
+@media (max-width: 480px) {
+  .hero img{
+    width: 200px;
+  }
+  .logo-container img{
+    width: 200px;
+  }
+  .panel-intro p{
+    font-size: 10px;
+  }
+
 }
